Fix dark mode contour champs : variable CSS --border-input
- Ajout variable --border-input (light: bleu 25%, dark: bleu clair 30%)
- FormField utilise var(--border-input) au lieu d'une couleur en dur

--- a/src/assets/dark-theme.scss
+++ b/src/assets/dark-theme.scss
@@ -20,6 +20,7 @@
   // Borders
   --border-main: #{$gray-300};
   --border-light: #{$gray-200};
+  --border-input: rgba(59, 89, 152, 0.25);
   --border-card: #{$gray-900};
 
   // Components
@@ -70,6 +71,7 @@ html.dark-mode {
   // Borders
   --border-main: #475569;
   --border-light: #334155;
+  --border-input: rgba(96, 165, 250, 0.3);
   --border-card: #475569;
 
   // Components
